force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/ProjectServiceQuestionDefinedResponse__c.object-meta.xml
<CustomObject>
    <description>Relates a Service Question Defined Response to a Project Service Question. Project Service Question Def Response is related to Project Service Question, Question, Question Defined Response, and Question Defined Repsonse Variant.</description>
    <label>Project Service Question Def Response</label>
    <nameField>
        <displayFormat>PSQDR-{00000000}</displayFormat>
        <label>Project Service Question  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Question Def Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>