force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/fields/DefinedResponseOrder__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseOrder__c</fullName>
    <formula>QuestionDefinedResponse__r.DefinedResponseOrder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defined Response Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>