force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/fields/DefinedResponseText__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseText__c</fullName>
    <formula>IF
( 
  Target__c !=null, 
  Target__r.Name,
  QuestionDefinedResponse__r.DefinedResponseText__c
)</formula>
    <label>Defined Response Text</label>
    <type>Text</type>
</CustomField>