force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/fields/DefinedResponseTextVariant__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseTextVariant__c</fullName>
    <formula>IF(OR(ISNULL(QuestionDefinedResponseVariant__c),QuestionDefinedResponseVariant__c = &#39;&#39;), QuestionDefinedResponse__r.DefinedResponseText__c, QuestionDefinedResponseVariant__r.DefinedResponseText__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defined Response Text Variant</label>
    <type>Text</type>
</CustomField>