force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/fields/JumpToAction__c.field-meta.xml
<CustomField>
    <fullName>JumpToAction__c</fullName>
    <label>JumpTo Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUESTION</fullName>
            </value>
            <value>
                <fullName>CONTINUE</fullName>
            </value>
            <value>
                <fullName>RETURN</fullName>
            </value>
            <value>
                <fullName>ENDOFSURVEY</fullName>
                <isActive>false</isActive>
                <label>ENDOFSURVEY</label>
            </value>
            <value>
                <fullName>NEXTTARGET</fullName>
                <isActive>false</isActive>
                <label>NEXTTARGET</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>