force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/fields/JumpToQuestion__c.field-meta.xml
<CustomField>
    <fullName>JumpToQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jump To Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipName>Project_Service_Question_Def_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>