force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/fields/OHId__c.field-meta.xml
<CustomField>
    <fullName>OHId__c</fullName>
    <formula>IF(UPPER(ProjectServiceQuestion__r.ProjectService__r.ServiceTemplateVersion__c) == &#39;V2&#39;, Name, Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OH Id</label>
    <type>Text</type>
</CustomField>