force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/fields/ProjectServiceQuestion__c.field-meta.xml
<CustomField>
    <fullName>ProjectServiceQuestion__c</fullName>
    <label>Project Service Question</label>
    <referenceTo>ProjectServiceQuestion__c</referenceTo>
    <relationshipName>ProjectServiceQuestionDefResponses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>