force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/fields/QuestionDefinedResponseVariant__c.field-meta.xml
<CustomField>
    <fullName>QuestionDefinedResponseVariant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Defined Response Variant</label>
    <referenceTo>QuestionDefinedResponseVariant__c</referenceTo>
    <relationshipName>Project_Service_Question_Def_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>