force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/fields/QuestionExceptionCode__c.field-meta.xml
<CustomField>
    <fullName>QuestionExceptionCode__c</fullName>
    <formula>QuestionDefinedResponse__r.Exception__r.ExceptionCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Exception Code</label>
    <type>Text</type>
</CustomField>