force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/fields/ResponseCount__c.field-meta.xml
<CustomField>
    <fullName>ResponseCount__c</fullName>
    <label>Response Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>