force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Target</label>
    <referenceTo>Target__c</referenceTo>
    <relationshipLabel>Project Service Question Def Responses</relationshipLabel>
    <relationshipName>ProjServQnDefResponses</relationshipName>
    <type>Lookup</type>
</CustomField>