force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/validationRules/Project_Status_check_on_save.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Status_check_on_save</fullName>
    <active>true</active>
    <description>Don&#39;t allow to inactive a defined response when the project is &quot;In Progress&quot;</description>
    <errorConditionFormula>AND (ISCHANGED(Active__c ),Active__c == false,  ProjectServiceQuestion__r.ProjectService__r.ProjectStatus__c ==&#39;In Progress&#39; )</errorConditionFormula>
    <errorMessage>Defined response cannot be edited when project is In Progress</errorMessage>
</ValidationRule>