force-app/main/default/objects/ProjectServiceQuestionDefinedResponse__c/validationRules/Validate_2_active_defined_responses.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_2_active_defined_responses</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED(Active__c ),Active__c == false, ProjectServiceQuestion__r.DefinedResponseCount__c &lt;= 2 )</errorConditionFormula>
    <errorMessage>There should be at least two (2) active Defined Responses for this question.</errorMessage>
</ValidationRule>